take photos functionality test 1

--- a/Archigram/Info.plist
+++ b/Archigram/Info.plist
@@ -46,7 +46,7 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Access to photo library?</string>
+	<string>Access to photo library</string>
 	<key>NSCameraUsageDescription</key>
 	<string>${PRODUCT_NAME} Camera Usage</string>
 </dict>
